--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@heroui/system": "^2.4.23",
     "@heroui/theme": "^2.4.23",
     "@supabase/ssr": "^0.7.0",
-    "@tanstack/react-form": "^1.23.7",
+    "@tanstack/react-form": "^1.23.8",
+    "@tanstack/react-query": "^5.90.9",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
