--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@heroui/button": "^2.2.27",
-    "@heroui/navbar": "^2.2.25",
-    "@heroui/react": "^2.8.5",
-    "@heroui/system": "^2.4.23",
-    "@heroui/theme": "^2.4.23",
+    "@heroui/button": "2.2.30",
+    "@heroui/navbar": "2.2.28",
+    "@heroui/react": "2.8.8",
+    "@heroui/system": "2.4.26",
+    "@heroui/theme": "2.4.26",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.84.0",
     "@tanstack/react-form": "^1.23.8",
@@ -21,22 +21,22 @@
     "framer-motion": "^12.23.24",
     "libphonenumber-js": "^1.12.29",
     "lucide-react": "^0.545.0",
-    "next": "15.5.7",
-    "next-intl": "^4.3.12",
+    "next": "16.1.6",
+    "next-intl": "4.8.2",
     "postcss": "^8.5.6",
     "react": "19.1.2",
     "react-dom": "19.1.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4.1.14",
-    "tailwindcss": "^4.1.14",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "16.1.6",
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5"
   }
 }
